fix
solve some img problem